// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UniswapWalletOptions Test Download wallet option should be visible if extension is not detected 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 8px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c5 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 4px;
}

.c11 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c12 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 12px;
}

.c2 {
  max-height: 72px;
  width: 100%;
  background: #FFFFFF;
  border-radius: 16px;
  position: relative;
}

.c3 {
  background: url(/images/extension_promo/background_connector.png);
  background-repeat: no-repeat;
  background-size: cover;
  opacity: 1;
  max-height: 72px;
  width: 100%;
  height: 100%;
  border-radius: 16px;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 0;
  -webkit-transition: opacity 125ms ease-in-out;
  transition: opacity 125ms ease-in-out;
}

.c6 {
  padding: 16px;
  gap: 12px;
  border-radius: 16px;
  overflow: hidden;
  max-height: 72px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: pointer;
  position: relative;
  z-index: 1;
}

.c6:hover {
  background: #22222212;
}

.c10 {
  padding: 16px;
  gap: 12px;
  border-radius: 16px;
  overflow: hidden;
  max-height: 72px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: pointer;
  position: relative;
  z-index: 1;
  background: #F9F9F9;
}

.c10:hover {
  background: #22222212;
}

.c7 {
  height: 32px;
  width: 32px;
  border-radius: 10px;
  fill: linear-gradient(0deg,#fff1ff 0%,rgba(255,255,255,0) 100%),#fffbff;
  -webkit-filter: drop-shadow(0px 1.179px 3.537px rgba(255,117,249,0.24));
  filter: drop-shadow(0px 1.179px 3.537px rgba(255,117,249,0.24));
}

<span
    class=""
    style="display: contents;"
  >
    <span
      class=" _dsp_contents"
    >
      <span
        class=" t_light _dsp_contents is_Theme"
      >
        <div
          class="c0"
        >
          <div
            class="c1"
          >
            <div
              class="c2"
              data-testid="download-uniswap-wallet"
            >
              <div
                class="c3"
              />
              <div
                class="c4 c5 c6"
              >
                <img
                  alt="uniswap-app-icon"
                  class="c7"
                  src="uniswap-wallet-icon.png"
                />
                <div
                  class="c4 c8"
                >
                  <div
                    class="c9"
                  >
                    <span
                      class="font_button _display-inline _boxSizing-border-box _mt-0px _mr-0px _mb-0px _ml-0px _color-white _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-medi3736 _lineHeight-f-lineHeigh507465454 _fontWeight-f-weight-me3083741 _whiteSpace-nowrap"
                      data-disable-theme="true"
                    >
                      Get Uniswap Wallet
                    </span>
                    <span
                      class="font_body _display-inline _boxSizing-border-box _mt-0px _mr-0px _mb-0px _ml-0px _color-white _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-micr111 _lineHeight-f-lineHeigh1263414315 _fontWeight-f-weight-bo3548 _whiteSpace-nowrap"
                      data-disable-theme="true"
                    >
                      Available on iOS, Android, and Chrome
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="c4 c5 c10"
              data-testid="connect-passkey-embedded-wallet"
            >
              <svg
                fill="none"
                stroke-width="8"
                style="width: 32px; height: 32px; color: currentColor;"
                viewBox="0 0 48 48"
              >
                <rect
                  fill="white"
                  fill-opacity="0.12"
                  height="48"
                  rx="7.819"
                  width="48"
                />
                <path
                  d="M20.3827 13.308C20.2688 13.3283 20.0289 13.3934 19.858 13.4544C18.2595 13.9913 16.962 15.3824 16.5186 17.0379C16.421 17.4039 16.4129 17.5056 16.4088 18.2703C16.4047 18.8357 16.421 19.1773 16.4576 19.3278C16.9294 21.2762 18.2758 22.6957 20.1468 23.2204C20.4519 23.3058 20.6308 23.3262 21.2288 23.3424C22.3473 23.375 22.8151 23.2855 23.6977 22.8665C24.4624 22.5005 25.0807 21.9839 25.585 21.2762C25.9267 20.7962 26.0935 20.483 26.2724 19.9827C26.4839 19.3726 26.5287 19.0309 26.5002 18.0751C26.4758 17.1192 26.4107 16.8345 26.0243 16.0535C25.3938 14.7723 24.3688 13.8937 22.9534 13.4259L22.5466 13.2917L21.5704 13.2836C21.0335 13.2754 20.5007 13.2876 20.3827 13.308Z"
                  fill="white"
                />
                <path
                  d="M30.0912 19.5475C29.9 19.5963 29.6438 19.6817 29.5218 19.7346C28.7083 20.0884 27.9111 20.8369 27.5206 21.6259C27.0488 22.5696 26.9877 23.8508 27.3701 24.8108C27.7077 25.6568 28.3178 26.3686 29.0703 26.7916L29.3591 26.9543L29.3631 30.0049L29.3713 33.0555L30.2173 33.8894L31.0674 34.7191L32.4707 33.3199C33.2435 32.5471 33.874 31.9004 33.874 31.876C33.874 31.8556 33.5038 31.4651 33.0523 31.0137L32.2266 30.188L32.7798 29.6307C33.4957 28.9067 33.874 28.5081 33.874 28.4674C33.874 28.4512 33.6055 28.1624 33.276 27.8248C32.9466 27.4872 32.6537 27.1821 32.6293 27.1414C32.5846 27.0804 32.609 27.056 32.8286 26.934C33.7682 26.4256 34.3905 25.7422 34.7607 24.8189C34.96 24.3186 35.0495 23.5092 34.9722 22.8299C34.8135 21.386 33.7357 20.0925 32.2999 19.6166C31.7182 19.4214 30.6769 19.3888 30.0912 19.5475ZM31.4457 21.2233C31.828 21.3534 32.247 21.9798 32.19 22.3377C32.1534 22.5655 31.9297 22.9763 31.767 23.1106C31.4498 23.375 30.9373 23.4278 30.5752 23.2407C29.9855 22.9357 29.7862 22.175 30.1522 21.6463C30.2661 21.4795 30.5346 21.2761 30.7217 21.207C30.9047 21.1419 31.2301 21.15 31.4457 21.2233Z"
                  fill="white"
                />
                <path
                  d="M19.6378 25.1037C18.3484 25.1525 17.4901 25.3762 16.5261 25.909C14.8747 26.8201 13.6667 28.3576 13.1949 30.1473C13.02 30.8103 12.9874 31.3188 13.0037 33.2671L13.0078 34.0928H20.3496H27.6913V30.9974V27.9062L27.2317 27.4506C26.6907 26.9137 26.467 26.633 26.1294 26.0473L25.8813 25.6162L25.3322 25.4413C24.3601 25.124 24.0998 25.0955 22.1392 25.0833C21.1997 25.0752 20.073 25.0874 19.6378 25.1037Z"
                  fill="white"
                />
              </svg>
              <div
                class="c4 c11"
              >
                <span
                  class="font_button _display-inline _boxSizing-border-box _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-medi3736 _lineHeight-f-lineHeigh507465454 _fontWeight-f-weight-me3083741 _whiteSpace-nowrap"
                  data-disable-theme="true"
                >
                  Passkey
                </span>
              </div>
            </div>
            <div
              class="c4 c12 c10"
            >
              <svg
                fill="none"
                stroke-width="8"
                style="width: 32px; height: 32px; min-width: 32px; background-color: rgb(254, 244, 255); border-top-left-radius: 8px; border-top-right-radius: 8px; border-bottom-right-radius: 8px; border-bottom-left-radius: 8px; padding: 7px 7px 7px 7px; color: rgb(252, 114, 255);"
                viewBox="0 0 22 22"
              >
                <path
                  d="M6.92609 1.83331H3.87053C3.33028 1.83331 2.81215 2.04793 2.43013 2.42995C2.04811 2.81197 1.8335 3.33009 1.8335 3.87035V6.92591M20.1668 6.92591V3.87035C20.1668 3.33009 19.9522 2.81197 19.5702 2.42995C19.1882 2.04793 18.67 1.83331 18.1298 1.83331H15.0742M15.0742 20.1666H18.1298C18.67 20.1666 19.1882 19.952 19.5702 19.57C19.9522 19.188 20.1668 18.6699 20.1668 18.1296V15.0741M1.8335 15.0741V18.1296C1.8335 18.6699 2.04811 19.188 2.43013 19.57C2.81215 19.952 3.33028 20.1666 3.87053 20.1666H6.92609M12.1829 12.1827V14.5483M12.1829 16.9139H14.5484V12.1827M14.5482 13.3654H16.9138M16.914 15.7311V16.9139M5.67739 5.08581H9.22578C9.5524 5.08581 9.81717 5.35059 9.81717 5.67721V9.22559C9.81717 9.55221 9.5524 9.81699 9.22578 9.81699H5.67739C5.35077 9.81699 5.08599 9.55221 5.08599 9.22559V5.67721C5.08599 5.35059 5.35077 5.08581 5.67739 5.08581ZM5.67739 12.1827H9.22578C9.5524 12.1827 9.81717 12.4475 9.81717 12.7741V16.3225C9.81717 16.6491 9.5524 16.9139 9.22578 16.9139H5.67739C5.35077 16.9139 5.08599 16.6491 5.08599 16.3225V12.7741C5.08599 12.4475 5.35077 12.1827 5.67739 12.1827ZM12.7743 5.08581H16.3226C16.6493 5.08581 16.914 5.35059 16.914 5.67721V9.22559C16.914 9.55221 16.6493 9.81699 16.3226 9.81699H12.7743C12.4476 9.81699 12.1829 9.55221 12.1829 9.22559V5.67721C12.1829 5.35059 12.4476 5.08581 12.7743 5.08581Z"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.75"
                />
              </svg>
              <div
                class="c4 c11"
              >
                <div
                  class="c9"
                >
                  <span
                    class="font_button _display-inline _boxSizing-border-box _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-medi3736 _lineHeight-f-lineHeigh507465454 _fontWeight-f-weight-me3083741 _whiteSpace-nowrap"
                    data-disable-theme="true"
                  >
                    Uniswap Mobile
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`UniswapWalletOptions Test Extension connecter should be shown if detected 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 8px;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c5 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 4px;
}

.c6 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 12px;
}

.c7 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  padding: 16px;
  gap: 12px;
  border-radius: 16px;
  overflow: hidden;
  max-height: 72px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  cursor: pointer;
  position: relative;
  z-index: 1;
  background: #F9F9F9;
}

.c4:hover {
  background: #22222212;
}

<span
    class=""
    style="display: contents;"
  >
    <span
      class=" _dsp_contents"
    >
      <span
        class=" t_light _dsp_contents is_Theme"
      >
        <div
          class="c0"
        >
          <div
            class="c1"
          >
            <div
              class="c2 c3 c4"
              data-testid="connect-uniswap-extension"
            >
              <div
                class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                style="height: 40px; width: 40px;"
              >
                <div
                  class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                  style="background-image: url(uniswap-logo.png);"
                />
                <img
                  alt=""
                  class="css-accessibilityImage-9pa8cd"
                  draggable="false"
                  src="uniswap-logo.png"
                />
              </div>
              <div
                class="c2 c5"
              >
                <span
                  class="font_button _display-inline _boxSizing-border-box _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-medi3736 _lineHeight-f-lineHeigh507465454 _fontWeight-f-weight-me3083741 _whiteSpace-nowrap"
                  data-disable-theme="true"
                >
                  Uniswap Extension
                </span>
              </div>
              <div
                class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column"
              >
                <span
                  class="font_body _display-inline _boxSizing-border-box _whiteSpace-pre-wrap _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral2 _fontFamily-f-family _wordWrap-break-word _fontSize-12px _lineHeight-16px _fontWeight-f-weight-bo3548"
                  data-disable-theme="true"
                >
                  Detected
                </span>
              </div>
            </div>
            <div
              class="c2 c6 c4"
            >
              <svg
                fill="none"
                stroke-width="8"
                style="width: 40px; height: 40px; min-width: 40px; background-color: rgb(254, 244, 255); border-top-left-radius: 8px; border-top-right-radius: 8px; border-bottom-right-radius: 8px; border-bottom-left-radius: 8px; padding: 7px 7px 7px 7px; color: rgb(252, 114, 255);"
                viewBox="0 0 22 22"
              >
                <path
                  d="M6.92609 1.83331H3.87053C3.33028 1.83331 2.81215 2.04793 2.43013 2.42995C2.04811 2.81197 1.8335 3.33009 1.8335 3.87035V6.92591M20.1668 6.92591V3.87035C20.1668 3.33009 19.9522 2.81197 19.5702 2.42995C19.1882 2.04793 18.67 1.83331 18.1298 1.83331H15.0742M15.0742 20.1666H18.1298C18.67 20.1666 19.1882 19.952 19.5702 19.57C19.9522 19.188 20.1668 18.6699 20.1668 18.1296V15.0741M1.8335 15.0741V18.1296C1.8335 18.6699 2.04811 19.188 2.43013 19.57C2.81215 19.952 3.33028 20.1666 3.87053 20.1666H6.92609M12.1829 12.1827V14.5483M12.1829 16.9139H14.5484V12.1827M14.5482 13.3654H16.9138M16.914 15.7311V16.9139M5.67739 5.08581H9.22578C9.5524 5.08581 9.81717 5.35059 9.81717 5.67721V9.22559C9.81717 9.55221 9.5524 9.81699 9.22578 9.81699H5.67739C5.35077 9.81699 5.08599 9.55221 5.08599 9.22559V5.67721C5.08599 5.35059 5.35077 5.08581 5.67739 5.08581ZM5.67739 12.1827H9.22578C9.5524 12.1827 9.81717 12.4475 9.81717 12.7741V16.3225C9.81717 16.6491 9.5524 16.9139 9.22578 16.9139H5.67739C5.35077 16.9139 5.08599 16.6491 5.08599 16.3225V12.7741C5.08599 12.4475 5.35077 12.1827 5.67739 12.1827ZM12.7743 5.08581H16.3226C16.6493 5.08581 16.914 5.35059 16.914 5.67721V9.22559C16.914 9.55221 16.6493 9.81699 16.3226 9.81699H12.7743C12.4476 9.81699 12.1829 9.55221 12.1829 9.22559V5.67721C12.1829 5.35059 12.4476 5.08581 12.7743 5.08581Z"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.75"
                />
              </svg>
              <div
                class="c2 c7"
              >
                <div
                  class="c8"
                >
                  <span
                    class="font_button _display-inline _boxSizing-border-box _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral1 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-medi3736 _lineHeight-f-lineHeigh507465454 _fontWeight-f-weight-me3083741 _whiteSpace-nowrap"
                    data-disable-theme="true"
                  >
                    Uniswap Mobile
                  </span>
                  <span
                    class="font_body _display-inline _boxSizing-border-box _mt-0px _mr-0px _mb-0px _ml-0px _color-neutral2 _fontFamily-f-family _wordWrap-break-word _fontSize-f-size-micr111 _lineHeight-f-lineHeigh1263414315 _fontWeight-f-weight-bo3548 _whiteSpace-nowrap"
                    data-disable-theme="true"
                  >
                    Scan QR code to connect
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="display: contents;"
        />
      </span>
    </span>
  </span>
</DocumentFragment>
`;
